--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,14 @@
 name: Build
-on: push
+on:
+  push:
+    branches:
+      - master
 env:
   CMAKE_BUILD_PARALLEL_LEVEL: 4
   HOMEBREW_NO_INSTALL_CLEANUP: 1
 jobs:
   core:
+    name: Build
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
