--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,9 @@ jobs:
     steps:
     - name: build
       uses: actions/checkout@v4
-      run: cmake --build .
+      run: |
+        cmake .
+        make
     - name: upload-artifacts
       uses: actions/upload-artifact@v4
       with:
