--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,22 +8,25 @@ env:
   CMAKE_BUILD_PARALLEL_LEVEL: 4
   HOMEBREW_NO_INSTALL_CLEANUP: 1
 jobs:
-  core:
-    name: Build
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-13, windows-latest]
-    runs-on: ${{ matrix.os }}
+  build:
+    runs-on: [ubuntu-latest, macos-latest-large, windows-latest]
     steps:
-    - name: checkout
-      uses: actions/checkout@v4
-    - name: build
-      run: |
-        cmake .
-        make
-    - name: upload-artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: executable
-        path: |
-          main
+      - uses: libsdl-org/setup-sdl@main
+        id: sdl
+        with:
+          install-linux-dependencies: true
+          version: 2-latest
+          version-sdl-image: 2-latest
+      - name: checkout
+        uses: actions/checkout@v4
+      - name: 'Configure and build your project'
+        run: |
+          cmake -S . -B build
+          cmake --build build --verbose
+      - name: upload-artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: executable
+          path: |
+            main
+
