--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
         os: [ ubuntu-latest, macos-13, windows-latest ]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: libsdl-org/setup-sdl@main
+      - uses: libsdl-org/setup-sdl@try-node16
         id: sdl
         with:
           install-linux-dependencies: true
