--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,10 +11,10 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ ubuntu-latest, macos-13, windows-latest ]
+        os: [ macos-13, windows-latest ]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: libsdl-org/setup-sdl@try-node16
+      - uses: libsdl-org/setup-sdl@main
         id: sdl
         with:
           install-linux-dependencies: true
