windows clang setup

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,10 @@ jobs:
           version-sdl-image: 2-latest
       - name: checkout
         uses: actions/checkout@v4
+      - name: setup-path
+        run: |
+          export CC=C:\msys64\mingw64\bin\clang
+          export CXX=C:\msys64\mingw64\bin\clang++
       - name: 'Configure and build your project'
         run: |
           cmake -S . -B build
