--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,8 +25,8 @@ jobs:
       - name: setup-path
         if: matrix.os == 'windows-latest'
         run: |
-          export CC=C:\msys64\mingw64\bin\clang
-          export CXX=C:\msys64\mingw64\bin\clang++
+          set CC=C:\msys64\mingw64\bin\clang
+          set CXX=C:\msys64\mingw64\bin\clang++
       - name: 'Configure and build your project'
         run: |
           cmake -S . -B build
