--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,8 +25,8 @@ jobs:
       - name: setup-path
         if: matrix.os == 'windows-latest'
         run: |
-          set CC=C:\msys64\mingw64\bin\clang
-          set CXX=C:\msys64\mingw64\bin\clang++
+          echo "{CC}={C:\msys64\mingw64\bin\clang}" >> $GITHUB_ENV
+          echo "{CXX}={C:\msys64\mingw64\bin\clang++}" >> $GITHUB_ENV
       - name: 'Configure and build your project'
         run: |
           cmake -S . -B build
