--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,12 +22,13 @@ jobs:
           version-sdl-image: 2-latest
       - name: checkout
         uses: actions/checkout@v4
-      - name: setup-path
+      - name: build-windows
         if: matrix.os == 'windows-latest'
         run: |
-          echo "{CC}={C:\msys64\mingw64\bin\clang}" >> $GITHUB_ENV
-          echo "{CXX}={C:\msys64\mingw64\bin\clang++}" >> $GITHUB_ENV
-      - name: 'Configure and build your project'
+          cmake -S . -B build -D CMAKE_CXX_COMPILER=C:\msys64\mingw64\bin\clang++
+          cmake --build build --verbose
+      - name: build
+        if: matrix.os != 'windows-latest'
         run: |
           cmake -S . -B build
           cmake --build build --verbose
@@ -36,5 +37,5 @@ jobs:
         with:
           name: executable
           path: |
-            main
+            *
 
