--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,13 +22,13 @@ jobs:
           version-sdl-image: 2-latest
       - name: checkout
         uses: actions/checkout@v4
-      - name: build-windows
+      - name: setup-clang-windows
         if: matrix.os == 'windows-latest'
-        run: |
-          cmake -S . -B build -D CMAKE_CXX_COMPILER=C:\msys64\mingw64\bin\clang++
-          cmake --build build --verbose
+        uses: egor-tensin/setup-clang@v1
+        with:
+          version: latest
+          platform: x64
       - name: build
-        if: matrix.os != 'windows-latest'
         run: |
           cmake -S . -B build
           cmake --build build --verbose
