--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,14 +24,13 @@ jobs:
         uses: actions/checkout@v4
       - name: setup-clang-windows
         if: matrix.os == 'windows-latest'
-        uses: egor-tensin/setup-clang@v1
-        with:
-          version: latest
-          platform: x64
-      - name: build
         run: |
-          cmake -S . -B build
-          cmake --build build --verbose
+          echo "::add-path::C:\msys64\mingw64\bin"
+      - name: build
+        uses: threeal/cmake-action@v1.3.0
+        with:
+          run-build: true
+          cxx-compiler: clang++
       - name: upload-artifacts
         uses: actions/upload-artifact@v4
         with:
