--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
       - name: setup-clang-windows
         if: matrix.os == 'windows-latest'
         run: |
-          echo "::add-path::C:\msys64\mingw64\bin"
+          echo "C:\msys64\mingw64\bin" >> $GITHUB_PATH
       - name: build
         uses: threeal/cmake-action@v1.3.0
         with:
