--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,7 @@ jobs:
         uses: lukka/get-cmake@latest
       - name: build
         run: |
+          mkdir build
           cmake -S . -B build -D CMAKE_C_COMPILER=clang -D CMAKE_CXX_COMPILER=clang++ -G ninja
           cmake --build build --verbose
       - name: upload-artifacts
