only upload executable; rename executable

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,5 +38,5 @@ jobs:
         with:
           name: build-files-${{ matrix.os }}
           path: |
-            build/**
+            build/GGBoy
 
